--- a/one_off/matrisome_stats.ipynb
+++ b/one_off/matrisome_stats.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "intermediate-refund",
+   "id": "blond-honor",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "trained-census",
+   "id": "supported-casting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "digital-kuwait",
+   "id": "deadly-excerpt",
    "metadata": {},
    "outputs": [
     {
@@ -54,7 +54,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  ensembl_gene_id = \u001b[31mcol_character()\u001b[39m,\n",
@@ -74,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "steady-venice",
+   "id": "configured-relaxation",
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +82,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -91,7 +91,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -100,7 +100,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m\n",
@@ -109,7 +109,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "thick-magazine",
+   "id": "severe-circus",
    "metadata": {},
    "outputs": [
     {
@@ -227,8 +227,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "caroline-flood",
+   "execution_count": 6,
+   "id": "constant-musician",
    "metadata": {},
    "outputs": [
     {
@@ -428,11 +428,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "hundred-lambda",
+   "execution_count": 9,
+   "id": "beneficial-house",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A grouped_df: 6 × 3</caption>\n",
+       "<thead>\n",
+       "\t<tr><th scope=col>division</th><th scope=col>category</th><th scope=col>n</th></tr>\n",
+       "\t<tr><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;chr&gt;</th><th scope=col>&lt;int&gt;</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><td>Core matrisome      </td><td>Collagens              </td><td> 44</td></tr>\n",
+       "\t<tr><td>Core matrisome      </td><td>ECM Glycoproteins      </td><td>195</td></tr>\n",
+       "\t<tr><td>Core matrisome      </td><td>Proteoglycans          </td><td> 35</td></tr>\n",
+       "\t<tr><td>Matrisome-associated</td><td>ECM Regulators         </td><td>238</td></tr>\n",
+       "\t<tr><td>Matrisome-associated</td><td>ECM-affiliated Proteins</td><td>171</td></tr>\n",
+       "\t<tr><td>Matrisome-associated</td><td>Secreted Factors       </td><td>344</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A grouped\\_df: 6 × 3\n",
+       "\\begin{tabular}{lll}\n",
+       " division & category & n\\\\\n",
+       " <chr> & <chr> & <int>\\\\\n",
+       "\\hline\n",
+       "\t Core matrisome       & Collagens               &  44\\\\\n",
+       "\t Core matrisome       & ECM Glycoproteins       & 195\\\\\n",
+       "\t Core matrisome       & Proteoglycans           &  35\\\\\n",
+       "\t Matrisome-associated & ECM Regulators          & 238\\\\\n",
+       "\t Matrisome-associated & ECM-affiliated Proteins & 171\\\\\n",
+       "\t Matrisome-associated & Secreted Factors        & 344\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A grouped_df: 6 × 3\n",
+       "\n",
+       "| division &lt;chr&gt; | category &lt;chr&gt; | n &lt;int&gt; |\n",
+       "|---|---|---|\n",
+       "| Core matrisome       | Collagens               |  44 |\n",
+       "| Core matrisome       | ECM Glycoproteins       | 195 |\n",
+       "| Core matrisome       | Proteoglycans           |  35 |\n",
+       "| Matrisome-associated | ECM Regulators          | 238 |\n",
+       "| Matrisome-associated | ECM-affiliated Proteins | 171 |\n",
+       "| Matrisome-associated | Secreted Factors        | 344 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "  division             category                n  \n",
+       "1 Core matrisome       Collagens                44\n",
+       "2 Core matrisome       ECM Glycoproteins       195\n",
+       "3 Core matrisome       Proteoglycans            35\n",
+       "4 Matrisome-associated ECM Regulators          238\n",
+       "5 Matrisome-associated ECM-affiliated Proteins 171\n",
+       "6 Matrisome-associated Secreted Factors        344"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "matrisome_df %>%\n",
+    "    group_by(division, category) %>%\n",
+    "    count()"
+   ]
   }
  ],
  "metadata": {
