Retooled meta analysis write-out and fixed WGCNA cor/pvalue write-out issue.

--- a/network_analysis/network_meta.ipynb
+++ b/network_analysis/network_meta.ipynb
@@ -2,10 +2,71 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 61,
-   "id": "ceramic-april",
+   "execution_count": 1,
+   "id": "statistical-leadership",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "\n",
+      "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
+      "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
+      "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
+      "\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
+      "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
+      "\n",
+      "\n",
+      "\n",
+      "clusterProfiler v3.18.0  For help: https://guangchuangyu.github.io/software/clusterProfiler\n",
+      "\n",
+      "If you use clusterProfiler in published research, please cite:\n",
+      "Guangchuang Yu, Li-Gen Wang, Yanyan Han, Qing-Yu He. clusterProfiler: an R package for comparing biological themes among gene clusters. OMICS: A Journal of Integrative Biology. 2012, 16(5):284-287.\n",
+      "\n",
+      "\n",
+      "Attaching package: 'clusterProfiler'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:purrr':\n",
+      "\n",
+      "    simplify\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    filter\n",
+      "\n",
+      "\n",
+      "Loading required package: dynamicTreeCut\n",
+      "\n",
+      "Loading required package: fastcluster\n",
+      "\n",
+      "\n",
+      "Attaching package: 'fastcluster'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    hclust\n",
+      "\n",
+      "\n",
+      "\n",
+      "Attaching package: 'WGCNA'\n",
+      "\n",
+      "\n",
+      "The following object is masked from 'package:stats':\n",
+      "\n",
+      "    cor\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "library(tidyverse)\n",
     "library(clusterProfiler)\n",
@@ -22,8 +83,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
-   "id": "mexican-fruit",
+   "execution_count": 2,
+   "id": "christian-declaration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,8 +97,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
-   "id": "declared-listening",
+   "execution_count": 3,
+   "id": "reported-layout",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,8 +107,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "id": "adaptive-english",
+   "execution_count": 4,
+   "id": "structural-atlas",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,10 +118,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
-   "id": "regional-chair",
+   "execution_count": 5,
+   "id": "durable-renewal",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "16.3867467107877"
+      ],
+      "text/latex": [
+       "16.3867467107877"
+      ],
+      "text/markdown": [
+       "16.3867467107877"
+      ],
+      "text/plain": [
+       "[1] 16.38675"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<style>\n",
+       ".dl-inline {width: auto; margin:0; padding: 0}\n",
+       ".dl-inline>dt, .dl-inline>dd {float: none; width: auto; display: inline-block}\n",
+       ".dl-inline>dt::after {content: \":\\0020\"; padding-right: .5ex}\n",
+       ".dl-inline>dt:not(:first-of-type) {padding-left: .5ex}\n",
+       "</style><dl class=dl-inline><dt>0%</dt><dd>1.56906363488154</dd><dt>25%</dt><dd>8.31333340949909</dd><dt>50%</dt><dd>12.7985561042827</dd><dt>75%</dt><dd>20.525808520527</dd><dt>100%</dt><dd>72.4299278680013</dd></dl>\n"
+      ],
+      "text/latex": [
+       "\\begin{description*}\n",
+       "\\item[0\\textbackslash{}\\%] 1.56906363488154\n",
+       "\\item[25\\textbackslash{}\\%] 8.31333340949909\n",
+       "\\item[50\\textbackslash{}\\%] 12.7985561042827\n",
+       "\\item[75\\textbackslash{}\\%] 20.525808520527\n",
+       "\\item[100\\textbackslash{}\\%] 72.4299278680013\n",
+       "\\end{description*}\n"
+      ],
+      "text/markdown": [
+       "0%\n",
+       ":   1.5690636348815425%\n",
+       ":   8.3133334094990950%\n",
+       ":   12.798556104282775%\n",
+       ":   20.525808520527100%\n",
+       ":   72.4299278680013\n",
+       "\n"
+      ],
+      "text/plain": [
+       "       0%       25%       50%       75%      100% \n",
+       " 1.569064  8.313333 12.798556 20.525809 72.429928 "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Subtract 1 from diagonal of TOM (so we don't count self-TOM)\n",
     "tom_summary_df <- tibble(geneID = colnames(data_expr), tom_conn = rowSums(tom - diag(1, nrow(tom), ncol(tom)))) %>%\n",
@@ -72,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sticky-championship",
+   "id": "public-season",
    "metadata": {},
    "outputs": [],
    "source": []
