--- a/network_analysis/relate_modules_to_traits_3.ipynb
+++ b/network_analysis/relate_modules_to_traits_3.ipynb
@@ -9,14 +9,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -106,7 +106,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dset_idx <- 2"
+    "dset_idx <- 3"
    ]
   },
   {
@@ -186,6 +186,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
+      "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
+      "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
       "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
       "\"Loglik converged before variable  1 ; coefficient may be infinite. \"\n",
       "Warning message in fitter(X, Y, istrat, offset, init, control, weights = weights, :\n",
@@ -389,7 +409,7 @@
     "mm_cors <- rep(0, n_genes)\n",
     "mm_pvals <- rep(0, n_genes)\n",
     "\n",
-    "for (i in seq_len(nrow(data_expr))) {\n",
+    "for (i in seq_len(n_genes)) {\n",
     "    mm_cors[i] <- joined_mm_gs_df[i, paste0(module_colors[i], \"_cor\")] %>% as.numeric()\n",
     "    mm_pvals[i] <- joined_mm_gs_df[i, paste0(module_colors[i], \"_pval\")] %>% as.numeric()\n",
     "}\n",
