--- a/figures/unified_DGE_vis_v2.ipynb
+++ b/figures/unified_DGE_vis_v2.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "assured-composite",
+   "id": "automatic-facing",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m -------------------------------------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ----------------------------------------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n",
@@ -52,7 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "personal-conference",
+   "id": "comfortable-click",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "celtic-jacob",
+   "id": "interstate-memory",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "dimensional-nickname",
+   "id": "sunrise-contrast",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "solid-madonna",
+   "id": "precise-wayne",
    "metadata": {},
    "source": [
     "# Functions"
@@ -101,7 +101,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "accepting-mounting",
+   "id": "hungry-sleeve",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "underlying-matter",
+   "id": "ignored-straight",
    "metadata": {},
    "source": [
     "# Load data"
@@ -152,7 +152,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "external-device",
+   "id": "smart-width",
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +160,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  geneID = \u001b[31mcol_character()\u001b[39m,\n",
       "  baseMean = \u001b[32mcol_double()\u001b[39m,\n",
@@ -174,7 +174,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  .default = col_double(),\n",
       "  Hugo_Symbol = \u001b[31mcol_character()\u001b[39m\n",
@@ -183,7 +183,7 @@
       "\n",
       "\n",
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m-------------------------------------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -213,7 +213,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "running-fitting",
+   "id": "gentle-arrival",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sticky-philippines",
+   "id": "closed-specific",
    "metadata": {},
    "source": [
     "# Volcano plots"
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "honest-promotion",
+   "id": "sexual-inquiry",
    "metadata": {},
    "outputs": [
     {
@@ -275,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "iraqi-winning",
+   "id": "metallic-schedule",
    "metadata": {},
    "outputs": [
     {
@@ -305,7 +305,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "political-solid",
+   "id": "statutory-reporter",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -320,7 +320,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fatty-career",
+   "id": "stone-discount",
    "metadata": {},
    "source": [
     "# Stacked barplots"
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "neural-supervisor",
+   "id": "classical-hazard",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -355,7 +355,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "ideal-newsletter",
+   "id": "aging-newfoundland",
    "metadata": {},
    "outputs": [
     {
@@ -380,7 +380,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "naval-estonia",
+   "id": "rural-yemen",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +499,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "electoral-semiconductor",
+   "id": "superb-notion",
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +528,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "structural-module",
+   "id": "unlike-first",
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "biblical-language",
+   "id": "amino-petersburg",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -579,13 +579,13 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ordinary-fishing",
+   "id": "perceived-ottawa",
    "metadata": {},
    "outputs": [],
    "source": [
     "assign(paste0(project[dset_idx], \"_mat_de_bplot\"), category_bplot)\n",
     "save(\n",
-    "    list = c(paste0(project[dset_idx], \"_mat_de_bplot\")),\n",
+    "    list = c(paste0(project[dset_idx], \"_mat_de_.Rda\")),\n",
     "    file = paste0(dirs$figures_dir, \"/saved_obj/\", dsets[dset_idx], \"_mat_de_bplots.RData\")\n",
     ")"
    ]
@@ -593,7 +593,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "directed-ocean",
+   "id": "visible-garlic",
    "metadata": {},
    "outputs": [],
    "source": []
