Re-ran some notebooks while drafting paper edits.

--- a/meta_analysis/gene_list_category_meta.ipynb
+++ b/meta_analysis/gene_list_category_meta.ipynb
@@ -3,21 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "religious-poverty",
+   "id": "congressional-farming",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "-- \u001b[1mAttaching packages\u001b[22m ------------------------------------------------------------------------------- tidyverse 1.3.0 --\n",
+      "-- \u001b[1mAttaching packages\u001b[22m ---------------------------------------------------------------------- tidyverse 1.3.0 --\n",
       "\n",
       "\u001b[32mv\u001b[39m \u001b[34mggplot2\u001b[39m 3.3.3     \u001b[32mv\u001b[39m \u001b[34mpurrr  \u001b[39m 0.3.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtibble \u001b[39m 3.0.6     \u001b[32mv\u001b[39m \u001b[34mdplyr  \u001b[39m 1.0.4\n",
       "\u001b[32mv\u001b[39m \u001b[34mtidyr  \u001b[39m 1.1.2     \u001b[32mv\u001b[39m \u001b[34mstringr\u001b[39m 1.4.0\n",
       "\u001b[32mv\u001b[39m \u001b[34mreadr  \u001b[39m 1.4.0     \u001b[32mv\u001b[39m \u001b[34mforcats\u001b[39m 0.5.1\n",
       "\n",
-      "-- \u001b[1mConflicts\u001b[22m ---------------------------------------------------------------------------------- tidyverse_conflicts() --\n",
+      "-- \u001b[1mConflicts\u001b[22m ------------------------------------------------------------------------- tidyverse_conflicts() --\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mfilter()\u001b[39m masks \u001b[34mstats\u001b[39m::filter()\n",
       "\u001b[31mx\u001b[39m \u001b[34mdplyr\u001b[39m::\u001b[32mlag()\u001b[39m    masks \u001b[34mstats\u001b[39m::lag()\n",
       "\n"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "sought-discipline",
+   "id": "elect-atlanta",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "adaptive-aircraft",
+   "id": "chemical-satisfaction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "japanese-witch",
+   "id": "figured-tract",
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m------------------------------------------------------------------------------------------------\u001b[39m\n",
+      "\u001b[36m--\u001b[39m \u001b[1m\u001b[1mColumn specification\u001b[1m\u001b[22m \u001b[36m---------------------------------------------------------------------------------------\u001b[39m\n",
       "cols(\n",
       "  Division = \u001b[31mcol_character()\u001b[39m,\n",
       "  Category = \u001b[31mcol_character()\u001b[39m,\n",
@@ -94,12 +94,14 @@
     "demg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_demg_list.txt\"))\n",
     "figo_umsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_umsmg_list.txt\"))\n",
     "survival_umsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_survival_umsmg_list.txt\"))\n",
-    "figo_nsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_nsmg_list.txt\"))\n"
+    "figo_nsmg_list <- read_lines(paste0(dirs$analysis_dir, \"/gene_lists/\", unified_dsets[dset_idx], \"_figo_nsmg_list.txt\"))\n",
+    "figo_sig_list <- union(figo_umsmg_list, figo_nsmg_list)\n",
+    "figo_sig_de_list <- intersect(figo_sig_list, demg_list)\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "earned-receiver",
+   "id": "consolidated-allen",
    "metadata": {},
    "source": [
     "# Matrisome overview"
@@ -108,7 +110,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "spectacular-minimum",
+   "id": "golden-guarantee",
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +182,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "piano-bleeding",
+   "id": "homeless-processor",
    "metadata": {},
    "source": [
     "# FIGO UMSMG $\\cap$ DEMG"
@@ -189,7 +191,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "incorporate-archive",
+   "id": "funny-harmony",
    "metadata": {},
    "outputs": [
     {
@@ -257,8 +259,134 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "sufficient-distance",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "33"
+      ],
+      "text/latex": [
+       "33"
+      ],
+      "text/markdown": [
+       "33"
+      ],
+      "text/plain": [
+       "[1] 33"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "281"
+      ],
+      "text/latex": [
+       "281"
+      ],
+      "text/markdown": [
+       "281"
+      ],
+      "text/plain": [
+       "[1] 281"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "618"
+      ],
+      "text/latex": [
+       "618"
+      ],
+      "text/markdown": [
+       "618"
+      ],
+      "text/plain": [
+       "[1] 618"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "173"
+      ],
+      "text/latex": [
+       "173"
+      ],
+      "text/markdown": [
+       "173"
+      ],
+      "text/plain": [
+       "[1] 173"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.238292011019284"
+      ],
+      "text/latex": [
+       "0.238292011019284"
+      ],
+      "text/markdown": [
+       "0.238292011019284"
+      ],
+      "text/plain": [
+       "[1] 0.238292"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "0.306122448979592"
+      ],
+      "text/latex": [
+       "0.306122448979592"
+      ],
+      "text/markdown": [
+       "0.306122448979592"
+      ],
+      "text/plain": [
+       "[1] 0.3061224"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "figo_umsmg_list %>% length()\n",
+    "figo_sig_list %>% length()\n",
+    "demg_list %>% length()\n",
+    "figo_sig_de_list %>% length()\n",
+    "\n",
+    "length(figo_sig_de_list) / length(union(figo_sig_list, demg_list))\n",
+    "# Use survival list as denom since it's smaller in all cases\n",
+    "length(intersect(survival_umsmg_list, figo_sig_list)) / length(survival_umsmg_list)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "loaded-warrant",
+   "id": "tough-flexibility",
    "metadata": {},
    "source": [
     "# Survival UMSMG $\\cap$ DEMG"
@@ -266,8 +394,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ethical-shooting",
+   "execution_count": 8,
+   "id": "monthly-maryland",
    "metadata": {},
    "outputs": [
     {
@@ -336,7 +464,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coupled-telescope",
+   "id": "addressed-julian",
    "metadata": {},
    "source": [
     "# FIGO NSMG $\\cap$ DEMG"
@@ -344,8 +472,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "round-ethnic",
+   "execution_count": 9,
+   "id": "fallen-shopping",
    "metadata": {},
    "outputs": [
     {
@@ -419,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "temporal-mouse",
+   "id": "mysterious-polyester",
    "metadata": {},
    "outputs": [],
    "source": []
